Fix x-api-key authentication
